* refactored Reflections to call a class hashCode when declared by the class or a superClass other than java.lang.Object [MOD-201]
* Improved debug message in AbstractCachingInterceptor: display method signature rather than method name [MOD-219]
* Removed reference to java.io.Closeable in org.springmodules.cache.impl.Element [MOD-235]

Changes in version 0.6 (19.09.2006)
-----------------------------------
Package org.springmodules.commons
* Basic support for Jakarta commons-chain added

Package org.springmodules.jbpm31
* Prevent jBPM NPE when deploying processes when no persistence service is used [MOD-192]
* Added processDefinitionsResources property to LocalJbpmConfigurationFactoryBean as an alternative for dealing ProcessDefinitions which require
	a JbpmContext to be loaded. See [MOD-193] for more information
* Added support inside JbpmTemplate for execution paths/child tokens (thanks go to Rob de Boer) [MOD-194]

Package org.springmodules.javaspaces
* Moved call method invocation into a separate method to allow subclasses to add custom behavior [MOD-175]

Package org.springmodules.jcr.jackrabbit
* Add support and documentation for Jackrabbit RMI server/client extension [MOD-191]
* Fixed null pointer exception with JcrSessionFactory when using Spring 2.0-rc3 [MOD-220]

Package org.springmodules.orm.ojb
* Host for Apache OJB project (moved from Spring starting with 2.0-rc4) [MOD-233]
* Add ojb support inside Spring Modules petclinic.

Package org.springmodules.orm.orbroker
* Promoted O/RBroker support out of the sandbox

Package org.springmodules.validation
* Updated dependency on spring to spring-2.0-rc2
* Updated dependency on acegi to acegi-security-1.0.1

Package org.springmodules.validation.commons
* Removed MapException class
* Updated DefaultBeanValidator class [JIRA MOD-39]

Package org.springmodules.validation.valang.javascript
* Updated ValangJavaScriptTranslator - fixed NPE when appendJsString(String) is called with null.